welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:31: error: not found: value estFaemur
		if (testd==true && estFaemur()) {
                                   ^